# files

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  TESTING.md  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src/: App-simple.vue  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: file.rs  mod.rs  search.rs
src-tauri/src/services/: file_system.rs  mod.rs  search.rs  search_complex.rs
src-tauri/src/types/: file_system.rs  mod.rs  search.rs
src/components/AI/: AIPanel.vue
src/components/Dashboard/: Dashboard-simple.vue  Dashboard.vue  DashboardWidget.vue
src/components/Dashboard/widgets/: AIInsightsWidget.vue  ActivityTimelineWidget.vue  (+5 more)
src/components/FileExplorer/: ContextMenu.vue  FavoriteLocations.vue  FileExplorer.vue  FileExplorerPane.vue  FileGrid.vue  FileList.vue  FileListItem.vue  FilePreview.vue  SplitPane.vue  TabBar.vue  TabbedFileExplorer-simple.vue  TabbedFileExplorer-working.vue  TabbedFileExplorer.vue
src/components/Search/: SearchPanel-simple.vue  SearchPanel.vue
src/components/Settings/: Settings-simple.vue  Settings.vue
src/components/common/: FileIcon.vue
src/services/: ai.ts  file-web.ts  file.ts  logger.ts  query.ts
src/services/api/: tauri.ts
src/stores/: search.ts  settings.ts  tabs.ts  tags.ts
src/types/: ai.ts  contextMenu.ts  dashboard.ts  events.ts  fileSystem.ts  index.ts  search.ts  settings.ts  tabs.ts  tags.ts
tests/: file-operations.spec.ts  global-setup.ts  global-teardown.ts  search.spec.ts
