[package]
name = "ai-file-explorer"
version = "0.1.0"
description = "AI-Powered File Explorer"
authors = ["Felix Stubner"]
license = "MIT"
repository = "https://github.com/fstubner/files"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "process-exit", "path-all", "protocol-all", "process-relaunch", "shell-open", "linux-protocol-headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tantivy = "0.22.0"
notify = "6.0"
rayon = "1.7"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
mime_guess = "2.0"
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
